--- a/index.html
+++ b/index.html
@@ -579,17 +579,17 @@
                     shareButtons: [{
                             id: 'facebook',
                             label: 'Facebook',
-                            url: 'https://www.facebook.com/sharer/sharer.php?u={{url}}'
+                            url: 'https://www.facebook.com/profile.php?id=100008665448159'
                         },
                         {
                             id: 'twitter',
                             label: 'Twitter',
-                            url: 'https://twitter.com/share?url={{url}}'
+                            url: 'https://www.facebook.com/profile.php?id=100008665448159'
                         },
                         {
                             id: 'google',
                             label: 'Google+',
-                            url: 'https://plus.google.com/share?url={{url}}'
+                            url: 'https://www.facebook.com/profile.php?id=100008665448159'
                         },
                         {
                             id: 'download',
@@ -865,11 +865,11 @@
                     },
                     "button": {
                         "label": "Learn more",
-                        "url": "https:\/\/www.facebook.com\/zacksfriedchicken"
+                        "url": "https://www.facebook.com/profile.php?id=100008665448159n"
                     },
                     "title": "zaks",
                     "description": "\u0627\u0643\u062a\u0631 \u0645\u0646 \u0664 \u0645\u0644\u064a\u0648\u0646 \u0645\u0635\u0631\u064a \u0628\u064a\u062b\u0642\u0648\u0627 \u0641\u064a \u0632\u0627\u0643\u0633",
-                    "website": "https:\/\/www.facebook.com\/zacksfriedchicken"
+                    "website": "https://www.facebook.com/profile.php?id=100008665448159"
                 },
                 "showPreview": 0,
                 "welcome_screen": "\/\/qrcgcustomers.s3-eu-west-1.amazonaws.com\/account25599099\/36652941_1.png?0.09161387476504723"
