--- a/index.html
+++ b/index.html
@@ -1033,12 +1033,16 @@
 
         /*]]>*/
     </script>
-    <ul>
-  <li><a href="default.asp">Home</a></li>
-  <li><a href="news.asp">News</a></li>
-  <li><a href="contact.asp">Contact</a></li>
-  <li><a href="about.asp">About</a></li>
-</ul>
+    <section class="random-sites">
+        <h2>Random Sites</h2>
+        <ul>
+            <li>Cairo</li>
+            <li>Giza</li>
+            <li>Another Random Site</li>
+            <li>Yet Another Random Site</li>
+            <li>One More Random Site</li>
+        </ul>
+    </section>
 
 </body>
 
