--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
                         "width": 654,
                         "height": 940
                     }, {
-                        "url": "\/\/qrcgcustomers.s3-eu-west-1.amazonaws.com\/account25599099\/36652950_1.png?0.8858866514918156",
+                        "url": "https://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png",
                         "name": "Screenshot_13.png",
                         "caption": "",
                         "progress": 100,
