--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
                         "width": 654,
                         "height": 940
                     }, {
-                        "url": "https://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png",
+                        "url": "img.png",
                         "name": "Screenshot_13.png",
                         "caption": "",
                         "progress": 100,
